# meta_core

./: Cargo.toml
.github/workflows/: auto-format.yml  ci.yml  notify-downstream.yml
src/: config.rs  data_dir.rs  lib.rs  lock.rs  store.rs
src/sync/: capability.rs  hash.rs  layer.rs  mod.rs
