[package]
name = "meta_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared infrastructure for ~/.meta/ directory management, lockfile, and atomic JSON store"

[dependencies]
anyhow = "1.0"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.8.3"
thiserror = "2.0.18"
constant_time_eq = "0.4.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.3"
